<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp"
    android:id="@+id/main">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseFile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:background="@drawable/roundedshape"
        android:text="Choose File Type"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fileList"
        android:textAllCaps="false"
        android:text="Transfer File"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseFile"
        android:background="@drawable/roundedshape2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resizePic"
        android:textAllCaps="false"
        android:text="Take a Picture"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fileList"
        android:background="@drawable/roundedshape3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/convertion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resizePic"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedshape"
        android:text="Convert a File"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/link_convertion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convertion"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedshape2"
        android:text="Convert Link"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/internalSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link_convertion"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedshape2"
        android:text="Save to Internal"
        android:textAllCaps="false" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/internalSave"
        android:layout_marginTop="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>

    <Button
        android:id="@+id/closeAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close Ad"
        android:textAllCaps="false"
        android:layout_below="@id/adView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        />

</RelativeLayout>