<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileType"
    android:padding="20dp"
    android:id="@+id/fileType">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="File Type"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/radioDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Document"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

        <RadioButton
            android:id="@+id/radioImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Image"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp" />

        <RadioButton
            android:id="@+id/radioAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Audio"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp" />

        <RadioButton
            android:id="@+id/radioVid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Video"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="File Extension"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@id/text2"
        android:layout_toRightOf="@+id/text2"
        android:backgroundTint="@color/black"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:text="." />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="39dp"
        android:text="Continue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/widgetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Number of Files"
        android:textAllCaps="false"
        android:background="@drawable/roundedshape"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="39dp"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/text2"
        android:padding="10dp" />
</RelativeLayout>